# e2e-test-20260329-153353

./: Dockerfile  pyproject.toml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-0-gpt35-gsm8k.yaml  comparative-1-gpt35-gsm8k.yaml  proposed-gpt35-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
